--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0 ,maximum-scale=1.0 ,minimum-scale=1.0">
     <title>JS Bin</title>
     <link rel="stylesheet" href="main.css">
+    <script src="//at.alicdn.com/t/font_1076377_qdxl9rbwnd.js"></script>
 
 
 </head>
@@ -12,9 +14,26 @@
 <body>
 <canvas id="xxx" width=300 height=300></canvas>
 <div id=actions class="actions">
-    <button id=eraser>橡皮擦</button>
-    <button id=brush>画笔</button>
+    <svg id="pen" class="icon active">
+        <use xlink:href="#icon-pen"></use>
+    </svg>
+    <svg id="eraser" class="icon">
+        <use xlink:href="#icon-Eraser-Tool"></use>
+    </svg>
+    <svg id="clear" >
+        <use xlink:href="#icon-clear_away"></use>
+    </svg>
+    </svg>
+    <svg id="save" >
+        <use xlink:href="#icon-download"></use>
+    </svg>
 </div>
+<ol class="colors">
+    <li id="black" class="black active"></li>
+    <li id="red" class="red"></li>
+    <li id="green" class="green"></li>
+    <li id="blue" class="blue"></li>
+</ol>
 <script src="main.js"></script>
 </body>
 
